add endpoints for getting shared statistics
