# backend/server/db_connector.go
@@ -9,6 +9,7 @@ type DBConnector interface {
 	DayPersistence
 	SharePersistence
 	ShareDayPersistence
+	ShareStatsPersistence
 	StatsPersistence
 	UserPersistence
 	LoginPersistence
@@ -28,6 +29,10 @@ type SharePersistence interface {
 type ShareDayPersistence interface {
 	ShareGetDayByUserAndRange(ctx context.Context, shareId string, userId string, startDate string, endDate string) (ret []Day, err error)
 	ShareGetDaysByUserIdAndDate(ctx context.Context, shareId string, userId string, dates []string) (ret []Day, err error)
+}
+type ShareStatsPersistence interface {
+	ShareGetPeriodStats(ctx context.Context, shareId string, userId string) (ret Statistic, err error)
+	ShareGetStats(ctx context.Context, shareId string, userId string) (ret UserStats, err error)
 }
 type StatsPersistence interface {
 	GetPeriodStats(ctx context.Context, userId string) (ret Statistic, err error)
